BFS与DFS算法的示意图

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 add_executable(NearestPoint2D main.cpp)
 target_link_libraries(NearestPoint2D ${OpenCV_LIBS})
 
-add_executable(Classify Classify.cpp)
-target_link_libraries(Classify ${OpenCV_LIBS})
+add_executable(BFS-DFS BFS-DFS.cpp)
+target_link_libraries(BFS-DFS ${OpenCV_LIBS})
